--- a/src/index.css
+++ b/src/index.css
@@ -80,25 +80,25 @@ h2 {
   background-color: #fff3cd;
   border-color: #ffeeba;
 }
-.gastos-realizados {
+.expenses-list {
   margin-bottom: 2rem;
 }
-.gastos-realizados li {
+.expenses-list li {
   list-style: none;
   margin-bottom: 0rem;
   border-bottom: 1px solid #e1e1e1;
   padding: 1rem 0;
 }
-.gastos-realizados li:last-of-type {
+.expenses-list li:last-of-type {
   margin-bottom: 0 !important;
 }
-.gastos-realizados li p {
+.expenses-list li p {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin: 0;
 }
-.gastos-realizados li p .gasto {
+.expenses-list li p .expense {
   background-color: #004085;
   padding: 1rem;
   color: white;
